--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,12 @@ body {
   border-radius: 5px;
 }
 
+@media (max-width: 640px) {
+  .Page {
+    padding: 0px !important;
+  }
+}
+
 .home-header {
   /* background: green; */
 }
